# r3v-svn

tags/cd/: llegeixme  mapes
tags/cd/codi/: autogen.sh
tags/cd/codi/doc/informe/: Makefile
tags/cd/codi/src/: Makefile.am  glwidget.cpp  glwidget.h  main.cpp
tags/cd/codi/src/libroam/: Makefile.am  diamond.cpp  diamondlist.cpp  frustum.h  map.cpp  map.h  node.h  observer.cpp  roam.h  triangle.cpp  trianglelist.h
tags/cd/codi/src/translations/: Makefile.am  ca.ts  template.ts
tags/cd/executable/: llegeixme  r3v
tags/informeFinal/: informe.tex
trunk/: AUTHORS  COMPILING  Makefile  TEXTO  autogen.sh  configure.in  diamond.cpp  diamond.h  diamondlist.cpp  diamondlist.h  faketriangle.cpp  faketriangle.h  faketrianglelist.cpp  faketrianglelist.h  geopoint.cpp  geopoint.h  glwidget.cpp  glwidget.h  map.cpp  map.h  mimapa  mimapa2.pm  moc_glwidget.cpp  node.cpp  node.h  observer.cpp  observer.h  parser.cpp  parser.h  r3v  r3v-qt4.pro  r3v.pro  r3v.xmi  r3v.xmi.tar.bz2  roam.cpp  seno.pm  triangle.cpp  triangle.h  trianglelist.cpp  trianglelist.h
trunk/dem/: url
trunk/doc/: disseny.xmi.tar.bz2  especificacio.xmi.tar.bz2  informe.tex  r3v.xmi.tar.bz2
trunk/doc/memoria/: Makefile  memoria.tex  page1.tex  page3.sxw  page5.tex
trunk/doc/presentacio/: presentacio.sxi
trunk/src/: Makefile.am  PATCH  glwidget.cpp  glwidget.h  main.cpp  src.pro
trunk/src/app/: app.pro  r3v.pro
trunk/src/icon/: Makefile.am
trunk/src/libroam/: Makefile.am  diamond.cpp  diamond.h  diamondlist.cpp  diamondlist.h  frustum.cpp  frustum.h  map.cpp  map.h  node.cpp  node.h  observer.cpp  observer.h  parser.cpp  parser.h  roam.cpp  roam.h  roamlib.pro  triangle.cpp  triangle.h  trianglelist.cpp  trianglelist.h
trunk/src/roamlib/: map.cpp  map.h  node.cpp  node.h  observer.cpp  parser.cpp  parser.h  roam.h  roamlib.pro  triangle.cpp  trianglelist.cpp  trianglelist.h
trunk/src/translations/: Makefile.am  ca.ts  es.ts  template.ts
