AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(r3v, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

echo "checking for Qt ..."

if test -z $QTDIR; then
	# Debian does not set $QTDIR but has things in place, checking for Debian
	if !(test -e /usr/include/qt3/qapplication.h && test -e /usr/bin/moc && test -e /usr/lib/libqt-mt.so.3 && test -e /usr/lib/libqt-mt.la); then
		echo "You don't Qt or Qt-devel packages installed, if you have them please set \$QTDIR to point to your Qt installation"
		exit
	else
		QT_INCLUDES="/usr/include/qt3"
		QT_MOC_PATH="/usr/bin"
		QT_LIBS="/usr/lib"
	fi
else
	if !(test -e $QTDIR); then
		echo "You have \$QTDIR set, but it does not point to any existing folder"
		exit
	fi

	if !(test -e $QTDIR/include) then
		echo "You have \$QTDIR set, but it does not seem to point to a valid Qt installation, there is no $QTDIR/include folder"
		exit
	fi

	if !(test -e $QTDIR/lib) then
		echo "You have \$QTDIR set, but it does not seem to point to a valid Qt installation, there is no $QTDIR/lib folder"
		exit
	fi

	if !(test -e $QTDIR/bin) then
		echo "You have \$QTDIR set, but it does not seem to point to a valid Qt installation, there is no $QTDIR/bin folder"
		exit
	fi

	if !(test -e $QTDIR/bin/moc) then
		echo "You have \$QTDIR set, but it does not seem to point to a valid Qt installation, could not find the moc executable"
		exit
	fi

	if !(test -e $QTDIR/lib/libqt-mt.so.3) then
		echo "Your Qt version does not seem the correct one to install r3v, you need the threaded version Qt3 (libqt-mt.so.3)"
		exit
	fi
	
	if !(test -e $QTDIR/lib/libqt-mt.la) then
		echo "You don't seem to have development package of Qt installed, please install it"
		exit
	fi
	
	QT_INCLUDES="$QTDIR/include"
	QT_MOC_PATH="$QTDIR/bin"
	QT_LIBS="$QTDIR/lib"
fi

echo "    Qt libs found at $QT_LIBS"
echo "    Qt includes found at $QT_INCLUDES"
echo "    Qt binaries found at $QT_MOC_PATH"

QT_INCLUDES="-I $QT_INCLUDES"
QT_LIB_LA="$QT_LIBS/libqt-mt.la"

AC_SUBST(QT_LIB_LA)
AC_SUBST(QT_INCLUDES)
AC_SUBST(QT_MOC_PATH)

AC_OUTPUT(Makefile src/Makefile src/libroam/Makefile)
