INCLUDES = $(all_includes)
lib_LTLIBRARIES =  libroam.la
libroam_la_SOURCES =  diamond.cpp diamond.h diamondlist.cpp diamondlist.h map.cpp map.h node.cpp node.h observer.cpp observer.h parser.cpp parser.h roam.cpp roam.h triangle.cpp triangle.h trianglelist.cpp trianglelist.h frustum.cpp frustum.h
libroam_la_LIBADD = -lGL -lGLU
